NEUE FUNKTION: email u gen und qr code